--- a/chrome-extension-profanity-filter/public/manifest.json
+++ b/chrome-extension-profanity-filter/public/manifest.json
@@ -1,18 +1,23 @@
 {
     "manifest_version": 3,
     "name": "Family Friendly Censor",
-    "version": "1.0",
-    "description": "",
+    "version": "1.0.0",
+    "description": "Censors words and blacklists webpages to ensure a family-friendly browsing experience.",
     "action": {
-        "default_popup": "index.html"
+        "default_popup": "index.html",
+        "default_icon": {
+            "32": "familycensor2.png"
+        }
     },
     "permissions": [
-        "scripting",
+        "storage",
         "tabs",
-        "activeTab"
-    ],
+        "activeTab",
+        "scripting"
+      ],
     "host_permissions": [
         "https://*/*",
         "http://*/*"
-    ]
+    ],
+    "options_page": "options.html"
   }
